--- a/BeerSlider.css
+++ b/BeerSlider.css
@@ -22,6 +22,7 @@
   overflow: hidden;
   z-index: 1;
   opacity: 0;
+  border-right: 1px solid rgba(0,0,0,0.15);
   transition: opacity 0.35s; }
   .beer-reveal > :first-child {
     width: 200%;
